// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcTableSort > #slots > should render default slot 1`] = `
<a
  class="ec-table-sort"
  data-test="ec-table-sort"
  href="#"
  title="Not sorted"
>
  <svg
    class="ec-icon ec-table-sort__icon"
    data-test="ec-table-sort__icon"
    height="16"
    width="16"
  >
    <use
      xlink:href="#ec-simple-arrow-up-down"
    />
  </svg>
  <!--v-if-->
</a>
`;

exports[`EcTableSort > :props > should render with direction set to ASC 1`] = `
<a
  class="ec-table-sort"
  data-test="ec-table-sort"
  href="#"
  title="Sorted ascending"
>
  <svg
    class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
    data-test="ec-table-sort__icon"
    height="16"
    width="16"
  >
    <use
      xlink:href="#ec-simple-arrow-drop-down"
    />
  </svg>
  <span
    class="ec-table-sort__text"
  >
    asc
  </span>
</a>
`;

exports[`EcTableSort > :props > should render with direction set to DESC 1`] = `
<a
  class="ec-table-sort"
  data-test="ec-table-sort"
  href="#"
  title="Sorted descending"
>
  <svg
    class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
    data-test="ec-table-sort__icon"
    height="16"
    width="16"
  >
    <use
      xlink:href="#ec-simple-arrow-drop-down"
    />
  </svg>
  <span
    class="ec-table-sort__text"
  >
    desc
  </span>
</a>
`;

exports[`EcTableSort > :props > should render with direction set to empty string 1`] = `
<a
  class="ec-table-sort"
  data-test="ec-table-sort"
  href="#"
  title="Not sorted"
>
  <svg
    class="ec-icon ec-table-sort__icon"
    data-test="ec-table-sort__icon"
    height="16"
    width="16"
  >
    <use
      xlink:href="#ec-simple-arrow-up-down"
    />
  </svg>
  <!--v-if-->
</a>
`;

exports[`EcTableSort > :props > should render with no direction 1`] = `
<a
  class="ec-table-sort"
  data-test="ec-table-sort"
  href="#"
  title="Not sorted"
>
  <svg
    class="ec-icon ec-table-sort__icon"
    data-test="ec-table-sort__icon"
    height="16"
    width="16"
  >
    <use
      xlink:href="#ec-simple-arrow-up-down"
    />
  </svg>
  <!--v-if-->
</a>
`;

exports[`EcTableSort > should render as expected 1`] = `
<a
  class="ec-table-sort"
  data-test="ec-table-sort"
  href="#"
  title="Not sorted"
>
  <svg
    class="ec-icon ec-table-sort__icon"
    data-test="ec-table-sort__icon"
    height="16"
    width="16"
  >
    <use
      xlink:href="#ec-simple-arrow-up-down"
    />
  </svg>
  <!--v-if-->
</a>
`;
